--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -11,11 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Version bump
-        uses: angkeith/bump-version@js
+        uses: remorses/bump-version@js
         with:
             version_file: ./VERSION
             github_token: ${{ secrets.GITHUB_TOKEN }}
             prerelease_tag: alpha
-            tag_version_bump_commit: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
